Add test for csv submission

--- a/sales_admin_submission/app/views/data/index.html.erb
+++ b/sales_admin_submission/app/views/data/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Dashboard</h1>
 
-<div class='submit-csv'>
+<div class='csv-form'>
   <h3>Submit Sales Data CSV</h3>
   <%= form_tag data_path, multipart: true do %>
     <%= file_field_tag :file %>
