--- a/sales_admin_submission/app/views/data/index.html.erb
+++ b/sales_admin_submission/app/views/data/index.html.erb
@@ -1,9 +1,5 @@
 <h1>Dashboard</h1>
 
-<div class='csv-form'>
-  <h3>Submit Sales Data CSV</h3>
-  <%= form_tag data_path, multipart: true do %>
-    <%= file_field_tag :file %>
-    <%= submit_tag "Import CSV" %>
-  <% end %>
-</div>
+<% if @merchants.empty? %>
+  <%= render partial: "csv_form" %>
+<% end %>
