Add queries to return total_revenue

--- a/sales_admin_submission/app/views/data/index.html.erb
+++ b/sales_admin_submission/app/views/data/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Dashboard</h1>
 
 <% if @merchants.empty? %>
-  <%= render partial: "csv_form" %>
+  <%= render partial: 'csv_form' %>
+<% else %>
+  <%= render partial: 'results' %>
 <% end %>
