--- a/sales_admin_submission/app/views/data/_results.html.erb
+++ b/sales_admin_submission/app/views/data/_results.html.erb
@@ -2,6 +2,8 @@
   <h3 class='total'>
     Total Revenue for all Merchants: <%= Merchant.total_sales_revenue %>
   </h3>
+
+  <h4>Revenue per Merchant</h4>
   <ul>
     <% @merchants.each do |merchant| %>
       <li><%= merchant.name %>: <%= merchant.total_revenue %></li>
