--- a/sales_admin_submission/app/views/data/_results.html.erb
+++ b/sales_admin_submission/app/views/data/_results.html.erb
@@ -1,12 +1,12 @@
 <div class='results'>
   <h3 class='total'>
-    Total Revenue for all Merchants: <%= Merchant.total_sales_revenue %>
+    Total Revenue for all Merchants: $<%= @total %>
   </h3>
 
   <h4>Revenue per Merchant</h4>
   <ul>
     <% @merchants.each do |merchant| %>
-      <li><%= merchant.name %>: <%= merchant.total_revenue %></li>
+      <li><%= merchant.name %>: $<%= merchant.total_revenue %></li>
     <% end %>
   </ul>
 </div>
