--- a/sales_admin_submission/app/views/layouts/application.html.erb
+++ b/sales_admin_submission/app/views/layouts/application.html.erb
@@ -7,8 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <% flash.each do |type, message| %>
+    <div class='flash'><h5><%= message.html_safe %></h5></div>
+  <% end %>
 
-<%= yield %>
+  <%= yield %>
 
 </body>
 </html>
